--- a/index.html
+++ b/index.html
@@ -9,7 +9,95 @@
   <link rel="stylesheet" href="./src/style/index.css">
 </head>
 <body>
-  Hello World
+  <header>
+    <nav>
+      <ul class="navList">
+        <li>Home</li>
+        <li>World</li>
+        <li>Technology</li>
+        <li>Design</li>
+        <li>Culture</li>
+        <li>Business</li>
+        <li>Politics</li>
+        <li>Opinion</li>
+        <li>Science</li>
+        <li>Health</li>
+      </ul>
+    </nav>
+  </header>
+  <main class="content">
+    <div class="articleNav">
+      <div class="about">
+        <h1>About</h1>
+        <p>
+          This is about section.This is about section.This is about section.This is about section.This is about section.
+          This is about section.This is about section.This is about section.This is about section.This is about section.
+          This is about section.This is about section.This is about section.
+        </p>
+      </div>
+      <div>
+        <h1>Archives</h1>
+        <ul>
+          <li><a href="">January 2020</a></li>
+          <li> <a href="">December 2019</a></li>
+          <li><a href="">November 2019</a></li>
+          <li><a href="">October 2019</a></li>
+          <li><a href="">September 2019</a></li>
+          <li><a href="">August 2019</a></li>
+          <li><a href="">July 2019</a></li>
+          <li><a href="">June 2019</a></li>
+          <li><a href="">May 2019</a></li>
+          <li><a href="">April 2019</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="articles">
+      <article class="article article-first">
+        <img src="./src/img/Thumbnail.png" class="img">
+        <div class="article-body">
+          <h1>Article 1</h1>
+          <p>This is article 1.This is article 1.This is article 1.This is article 1.This is article 1.This is article 1.This is article 1.</p>
+          <a href="">View details <small>>></small></a>
+        </div>
+      </article>
+      <article class="article article-second">
+        <img src="./src/img/Thumbnail.png" class="img">
+        <div class="article-body">
+          <h1>Article 2</h1>
+          <p>
+            This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.
+            This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.
+            This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.
+            This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.
+            This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.
+            This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.This is article 2.
+          </p>
+          <a href="">View details <small>>></small></a>
+        </div>
+      </article>
+      <article class="article article-third">
+        <img src="./src/img/Thumbnail.png" class="img">
+          <div class="article-body">
+          <h1>Article 3</h1>
+          <p>
+            This is article 3.This is article 3.This is article 3.This is article 3.This is article 3.This is article 3.This is article 3.This is article 3.This is article 3.This is article 3.This is article 3.
+            This is article 3.This is article 3.This is article 3.This is article 3.This is article 3.This is article 3.This is article 3.This is article 3.This is article 3.
+          </p>
+          <a href="">View details <small>>></small></a>
+        </div>
+      </article>
+    </div>
+    <div class="loginSection">
+      <div class="loginBox">
+        <input type="email" placeholder="Email adress" class="input"/>
+        <input type="password" placeholder="Password" class="input"/>
+        <label class="rememberMe">
+          <input type="checkbox"/> Remember me
+        </label>
+        <button class="btn">Sign in</button>
+      </div>
+    </div>
+  </main>
   <script src="src/app.js"></script>
 </body>
 </html>
