[maida] feat: add footer

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./src/style/index.css">
 </head>
 <body>
-  <header>
+  <header id="header">
     <nav>
       <ul class="navList">
         <li>Home</li>
@@ -98,6 +98,10 @@
       </div>
     </div>
   </main>
+  <footer class="footer">
+    <p>Advanced CSS homework built by <a href="https://github.com/EscapedSheep/F-css-layout-homework">@盖迈达</a></p>
+    <a href="#header">Back to top</a>
+  </footer>
   <script src="src/app.js"></script>
 </body>
 </html>
