[maida] fix: fix articles display

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <label class="rememberMe">
           <input type="checkbox"/> Remember me
         </label>
-        <button class="btn">Sign in</button>
+        <button class="button-login">Sign in</button>
       </div>
     </div>
   </main>
