[maida] fix: fix about and archives to italic

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <main class="content">
     <div class="articleNav">
       <div class="about">
-        <h1>About</h1>
+        <h1><i>About</i></h1>
         <p>
           This is about section.This is about section.This is about section.This is about section.This is about section.
           This is about section.This is about section.This is about section.This is about section.This is about section.
@@ -36,7 +36,7 @@
         </p>
       </div>
       <div>
-        <h1>Archives</h1>
+        <h1><i>Archives</i></h1>
         <ul>
           <li><a href="">January 2020</a></li>
           <li><a href="">December 2019</a></li>
